# CMake

./: CMakeLists.txt
include/: math_utils.hpp
src/: main.cpp  math_utils.cpp
